# hotel-app

./: .actignore  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  build-desktop.ps1  docker-compose.prod.yml  docker-compose.yml  iosPasskeyAuthAppInfo.plist  iosPasskeyAuthAppPasskeyAuthApp.entitlements  tmpclaude-e1c6-cwd
hotel-app-be/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
hotel-app-be/database/: 00_create_user.sql  00_init.sql  README.md
hotel-app-be/database/migrations/: 001_add_audit_logs.sql  001_core_extensions_functions.sql  001_core_system_setup.sql  002_authentication_authorization.sql  002_authentication_rbac.sql  003_session_management.sql  003_system_settings_audit.sql  004_audit_and_settings.sql  004_enhance_booking_fields.sql  004_guest_management.sql  005_guest_management.sql  005_loyalty_program.sql  006_loyalty_program.sql  006_room_management.sql  007_rate_pricing.sql  007_room_management.sql  008_bookings.sql  008_rate_pricing.sql  009_bookings_reservations.sql  009_payments_invoices.sql  010_customer_ledgers.sql  010_payments_services.sql  011_add_tourism_extra_bed_fields.sql  011_night_audit_extra_bed.sql  011_partial_complimentary.sql  012_add_guest_ic_number.sql  012_guest_cascade_delete.sql  012_remove_duplicate_guests.sql  012_rename_complimentarise_to_released.sql  013_enhanced_room_status_system.sql  013_update_payment_status_constraint.sql  014_add_company_to_bookings.sql  014_customer_ledger_payment_safety.sql  014_fix_auto_revert_dirty_status.sql  014_fix_night_audit_posting.sql  015_add_payment_note.sql  015_enhanced_checkin_fields.sql  016_customer_ledgers.sql  017_add_voided_booking_status.sql  017_pat_style_ledger_enhancement.sql  (+12 more)
hotel-app-be/database/schema/: 02_user_data.sql  03_booking_data.sql
hotel-app-be/database/seed-data/: 01_system_config_seed.sql  01_system_roles_admin.sql  02_user_data_seed.sql  02_users_staff.sql  02_users_staff_seed.sql  03_booking_data_seed.sql  03_rooms_rates.sql  04_guests_bookings.sql  04_loyalty_rewards_seed.sql  05_loyalty_data.sql  05_loyalty_ekyc_seed.sql  06_basic_sample_data.sql  07_rate_plans_seed.sql
hotel-app-be/database/seed-data_backup/: 02_create_super_admin.sql  03_guests_bookings_seed.sql  04_payments_invoices_seed.sql
hotel-app-be/database/sqlite_migrations/: 001_initial_schema.sql
hotel-app-be/src/: auth.rs  constants.rs  db.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs
hotel-app-be/src/core/: auth.rs  db.rs  error.rs  middleware.rs  mod.rs  rate_limiter.rs  sql_compat.rs
hotel-app-be/src/handlers/: analytics.rs  audit.rs  auth.rs  bookings.rs  bookings_queries.rs  companies.rs  data_transfer.rs  ekyc.rs  guest_portal.rs  guests.rs  ledgers.rs  loyalty.rs  mod.rs  night_audit.rs  passkey.rs  payments.rs  profile.rs  rates.rs  rbac.rs  rooms.rs  rooms_queries.rs  search.rs  settings.rs  two_factor.rs
hotel-app-be/src/models/: analytics.rs  audit.rs  auth.rs  booking.rs  common.rs  company.rs  data_transfer.rs  ekyc.rs  guest.rs  guest_portal.rs  ledger.rs  loyalty.rs  mod.rs  night_audit.rs  payment.rs  rate.rs  rbac.rs  rewards.rs  room.rs  row_mappers.rs  settings.rs  user.rs
hotel-app-be/src/repositories/: booking.rs  guest.rs  ledger.rs  loyalty.rs  mod.rs  payment.rs  rbac.rs  room.rs  settings.rs  user.rs
hotel-app-be/src/routes/: analytics.rs  audit.rs  auth.rs  bookings.rs  companies.rs  data_transfer.rs  ekyc.rs  guest_portal.rs  guests.rs  ledgers.rs  loyalty.rs  mod.rs  night_audit.rs  passkey.rs  payments.rs  profile.rs  rates.rs  rbac.rs  rooms.rs  search.rs  settings.rs  two_factor.rs
hotel-app-be/src/services/: audit.rs  booking.rs  invoice_numbers.rs  loyalty.rs  mod.rs  night_audit.rs
hotel-app-be/src/utils/: mod.rs  sanitization.rs  validation.rs
hotel-app-be/tests/: booking_service.rs  rooms_search.rs
hotel-app-be/tests/common/: mod.rs
hotel-desktop/src-tauri/: Cargo.toml  tauri.conf.json  tmpclaude-2d08-cwd
hotel-desktop/src-tauri/capabilities/: default.json
hotel-desktop/src-tauri/database/migrations/: 001_core_extensions_functions.sql  002_authentication_rbac.sql  003_system_settings_audit.sql  004_guest_management.sql  006_room_management.sql  008_bookings.sql  009_payments_invoices.sql  011_room_status_today_checkin.sql  013_guest_tourism_type.sql  013_invoice_number_format.sql  014_fix_email_constraint.sql  016_add_service_tax_rate_setting.sql  017_checkout_reserved_status.sql  019_add_settings_manage_permission.sql  020_populate_room_status_transitions.sql  021_deduplicate_guests_unique_fullname.sql  022_sync_payment_status.sql  023_auto_checkin_function.sql  025_add_daily_rates_column.sql  034_night_audit_restore_daily_rates.sql
hotel-desktop/src-tauri/database/seed-data/: 01_system_roles_admin.sql  04_guests_bookings.sql  05_loyalty_data.sql
hotel-desktop/src-tauri/icons/: icon.icns
hotel-desktop/src-tauri/pgsql/lib/postgresql@14/: libecpg.6.14.dylib  libecpg_compat.3.14.dylib  libpgtypes.3.14.dylib  libpq.5.14.dylib
hotel-desktop/src-tauri/pgsql/lib/postgresql@14/pkgconfig/: libecpg.pc  libecpg_compat.pc  libpgtypes.pc  libpq.pc
hotel-desktop/src-tauri/pgsql/share/doc/html/: acronyms.html  admin.html  adminpack.html  amcheck.html  app-clusterdb.html  app-createdb.html  app-createuser.html  app-dropdb.html  app-dropuser.html  app-ecpg.html  app-initdb.html  app-pg-ctl.html  app-pg-dumpall.html  app-pg-isready.html  app-pgamcheck.html  app-pgbasebackup.html  app-pgchecksums.html  app-pgconfig.html  app-pgcontroldata.html  app-pgdump.html  app-pgreceivewal.html  app-pgreceivexlog.html  app-pgrecvlogical.html  app-pgresetwal.html  app-pgresetxlog.html  app-pgrestore.html  app-pgrewind.html  app-pgverifybackup.html  app-postgres.html  app-postmaster.html  app-psql.html  app-reindexdb.html  app-vacuumdb.html  appendix-obsolete.html  appendixes.html  applevel-consistency.html  arrays.html  auth-bsd.html  auth-cert.html  auth-delay.html  (+1112 more)
hotel-desktop/src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  postgres.rs  server.rs
(+760 files in other folders)
