[package]
name = "hotel-app-be"
version = "0.1.0"
edition = "2021"

[lib]
name = "hotel_app_be"
path = "src/lib.rs"

[[bin]]
name = "hotel-app-be"
path = "src/main.rs"

[features]
default = ["postgres"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "set-header"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "uuid", "chrono", "rust_decimal", "migrate"] }
clap = { version = "4", features = ["derive"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rust_decimal = "1.32"
# webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }  # Requires OpenSSL - disabled for Windows build
base64 = "0.21"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
sha2 = "0.10"
rand = "0.8"
regex = "1.10"
validator = { version = "0.16", features = ["derive"] }
ammonia = "3.3"
dotenvy = "0.15"
# 2FA dependencies
totp-rs = { version = "5.4", features = ["qr"] }
data-encoding = "2.5"
image = "0.24"
qrcode = "0.13"
# tower_governor = "0.8"  # TODO: Add for rate limiting (requires version 0.8+)

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
