[package]
name = "hotel-app-be"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"

[lib]
name = "hotel_app_be"
path = "src/lib.rs"

[[bin]]
name = "hotel-app-be"
path = "src/main.rs"

[features]
default = ["postgres"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dependencies]
tokio = { version = "1.51", features = ["full"] }
axum = { version = "0.8", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "set-header"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "uuid", "chrono", "rust_decimal", "migrate", "json"] }
clap = { version = "4", features = ["derive"] }
bcrypt = "0.17"
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
rust_decimal = "1.37"
# webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }  # Requires OpenSSL - disabled for Windows build
base64 = "0.22"
hex = "0.4"
thiserror = "2.0"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
sha2 = "0.10"
rand = "0.9"
regex = "1.11"
validator = { version = "0.20", features = ["derive"] }
ammonia = "4.1"
dotenvy = "0.15"
# 2FA dependencies
totp-rs = { version = "5.7", features = ["qr"] }
data-encoding = "2.8"
image = "0.25"
qrcode = "0.14"
# Rate limiting is implemented in-memory (core/rate_limiter.rs) - no external dependency needed

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
