[package]
name = "hotel-desktop"
version = "0.1.0"
edition = "2021"
description = "Hotel Management Desktop Application"
authors = ["Hotel App Team"]

[lib]
name = "hotel_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

# Backend library
hotel-app-be = { path = "../../hotel-app-be" }

# PostgreSQL Embedded
postgresql_embedded = { version = "0.18", features = ["tokio"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System directories
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for health checks
reqwest = { version = "0.12", features = ["json"] }

# Axum for server types
axum = "0.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
