[package]
name = "hotel-desktop"
version = "1.0.0"
description = "Hotel Management Desktop Application"
authors = ["Hotel App"]
edition = "2021"

[lib]
name = "hotel_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["time", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
