[package]
name = "hotel-desktop"
version = "1.0.0"
description = "Hotel Management System - Desktop Application"
authors = ["Hotel App"]
edition = "2021"

[lib]
name = "hotel_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_Foundation"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
